# silhouette

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPING.md  LICENSE  Makefile  README.md  pyproject.toml  wrangler.toml
docs/: generate_icon.py  generate_minimal_power_plots.py  generate_plots.py
fpca/: README.md  fit.py
playground/: index.html  main.py
playground/css/: style.css
playground/js/: app.js
playground/py/: runtime.py  worker.py
src/silhouette/: __init__.py  _base.py  _fpca_model.npz  exponential.py  fpca.py  minimal_power.py  omni.py  plotting.py  three_parameter.py  two_parameter.py  vdot.py
tests/: conftest.py  test_exponential.py  test_fpca.py  test_minimal_power.py  test_omni.py  test_plotting.py  test_three_parameter.py  test_two_parameter.py  test_vdot.py
