[project]
name = "silhouette"
version = "0.2.0"
description = "Silhouette is the Python library for intensity duration modelling in endurance sports."
readme = "README.md"
authors = [
    { name = "Aart Goossens", email = "aart@sweatstack.no" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
